final presentation day

--- a/public/css1/appointment.css
+++ b/public/css1/appointment.css
@@ -1,4 +1,4 @@
-#hall_show .show_title{height:120px;background:url(../img/appointmentpage.jpg) 120px 0px no-repeat #586c90}
+#hall_show .show_title{height:120px;background:url(../img/appointmentpage.jpg) 120px 0px no-repeat #133C55}
 
 /*Below is for the BOOK APPOINTMNET FORM*/  
 	   .entry-container>.entry-container-inner .center {
