--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,7 +19,7 @@ html(xmlns="http://www.w3.org/1999/xhtml")
     |
     script(src="http://code.jquery.com/jquery-3.3.1.min.js", integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=", crossorigin="anonymous")
     |
-    script(lang="javascript", src="/js1/index.js")
+    //-    script(lang="javascript", src="/js1/index.js")
     |
     script(language="javascript", type="text/javascript", src="/js1/KunyiHTML5.min.js")
     |     
