use mLAB successfully!

--- a/views/newcomer.pug
+++ b/views/newcomer.pug
@@ -19,8 +19,8 @@ block mainContent
       div.hallImg_show         
        .container-inner 
         | You’re Not Alone With the Smart Start program, male or female adults will find effective ways to gradually add exercise to their daily routine and improve the chance that they’ll stick with it for life. Smart Start includes a whole range of fitness classes, but it is so much more than that. It is a complete source of information on fitness-related topics, special programs, instruction, and support mechanisms that will not only help you get started with a fitness plan, but increase your chance of success. There is no single right way to develop lasting fitness habits, so we offer a variety of programs, at many different times and locations, to better suit your personal preferences and busy schedule. All you have to do is select activities that interest you and be willing to learn the basic skills. You can then do it on your own or with other adults, who have similar skill levels.
-      each doc in documents
-       li=doc
+      //each doc in documents
+      // li=doc
       #searchPhysician
         form.searchPhysician(action="submit")
          input.nameSearch(type="search", name="name" placeholder='Physician name')
