use mLAB successfully!

--- a/views/index.pug
+++ b/views/index.pug
@@ -40,8 +40,7 @@ block mainContent
              $('#qualification').text('${doc.qualifications}')
              $('#language').text('${doc.languages}')
              $('#rate').text('${doc.rate}')
-             $('#disciplineHistory').text('${doc.disciplineHistory}')
-            `)
+             $('#disciplineHistory').text('${doc.disciplineHistory}')`)
             img(class="physician" alt=doc.index src=doc.image)
             ins=`Dr. ${doc.name}`
         |
