use mLAB successfully!

--- a/views/clinicInfo.pug
+++ b/views/clinicInfo.pug
@@ -4,7 +4,7 @@ block title
 
 block headComplement
   link(rel="stylesheet", href="/css1/clinicInfo.css", type="text/css")
-  script(src="/js1/clinicInfo.js")
+  script(type="text/javascript",src="/js1/clinicInfo.js")
 
 block mainContent
  #hall_show.wrap
