use mLAB successfully!

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,6 +3,7 @@ block title
   title Physician List
 
 block headComplement
+  script(type="text/javascript", src="/js1/index.js")
 
 block mainContent
   #hall_show.wrap(style='border:solid 0px; height:800px')
