--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,7 +17,7 @@ html(xmlns="http://www.w3.org/1999/xhtml")
     |
     link(rel="stylesheet", href="/css1/normalize.css", type="text/css")
     |
-    script(src="http://code.jquery.com/jquery-3.3.1.min.js", integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=", crossorigin="anonymous")
+    script(src="https://code.jquery.com/jquery-3.3.1.min.js", integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=", crossorigin="anonymous")
     |
     script(type="text/javascript", src="/js1/index.js")
     |
